// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`THR-1672 pin — the three spell writers write the same edges through grantSpell > applySpellStamp (debug), including the full-slot eviction and an idempotent re-stamp > edges 1`] = `
[
  {
    "id": "has_trait_caster_000_power.spell.spell_hollow_crown",
    "properties": {
      "acquiredTick": 10,
      "level": 1,
      "modifiers": {},
      "source": "debug",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_000",
    "target": "power.spell.spell_hollow_crown",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_000_power.spell.spell_soulfire",
    "properties": {
      "acquiredTick": 10,
      "level": 1,
      "modifiers": {},
      "source": "debug",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_000",
    "target": "power.spell.spell_soulfire",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_000_power.spell.spell_veilwalk",
    "properties": {
      "acquiredTick": 10,
      "level": 1,
      "modifiers": {},
      "source": "debug",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_000",
    "target": "power.spell.spell_veilwalk",
    "type": "has_trait",
  },
  {
    "id": "knows_spell_caster_000_power.spell.spell_height_anchor",
    "properties": {
      "learnedTick": 10,
      "source": "debug",
      "sphereAffinity": "time",
    },
    "source": "caster_000",
    "target": "power.spell.spell_height_anchor",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_000_power.spell.spell_hollow_crown",
    "properties": {
      "learnedTick": 10,
      "source": "debug",
      "sphereAffinity": "mind",
    },
    "source": "caster_000",
    "target": "power.spell.spell_hollow_crown",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_000_power.spell.spell_soulfire",
    "properties": {
      "learnedTick": 10,
      "source": "debug",
      "sphereAffinity": "energy",
    },
    "source": "caster_000",
    "target": "power.spell.spell_soulfire",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_000_power.spell.spell_veilwalk",
    "properties": {
      "learnedTick": 10,
      "source": "debug",
      "sphereAffinity": "spirit",
    },
    "source": "caster_000",
    "target": "power.spell.spell_veilwalk",
    "type": "knows_spell",
  },
]
`;

exports[`THR-1672 pin — the three spell writers write the same edges through grantSpell > applySpellStamp (debug), including the full-slot eviction and an idempotent re-stamp > results 1`] = `
[
  {
    "agentId": "caster_000",
    "message": "'Caster 0' knows and wields Veilwalk",
    "spellId": "spell_veilwalk",
    "success": true,
  },
  {
    "agentId": "caster_000",
    "message": "'Caster 0' knows and wields Height Anchor",
    "spellId": "spell_height_anchor",
    "success": true,
  },
  {
    "agentId": "caster_000",
    "message": "'Caster 0' knows and wields Pact of the Hollow Crown",
    "spellId": "spell_hollow_crown",
    "success": true,
  },
  {
    "agentId": "caster_000",
    "message": "'Caster 0' knows and wields Soulfire",
    "spellId": "spell_soulfire",
    "success": true,
  },
  {
    "agentId": "caster_000",
    "message": "'Caster 0' knows and wields Veilwalk",
    "spellId": "spell_veilwalk",
    "success": true,
  },
  {
    "message": "No spell template 'spell_nonexistent'",
    "success": false,
  },
]
`;

exports[`THR-1672 pin — the three spell writers write the same edges through grantSpell > create × Power (learn_spell), library and sphere shelves, through the slot cap > edges 1`] = `
[
  {
    "id": "has_trait_caster_000_power.spell.spell_gen_earth_1_0",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_000",
    "target": "power.spell.spell_gen_earth_1_0",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_000_power.spell.spell_gen_earth_1_1",
    "properties": {
      "acquiredTick": 11,
      "level": 1,
      "modifiers": {},
      "source": "learn_spell",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_000",
    "target": "power.spell.spell_gen_earth_1_1",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_000_power.spell.spell_gen_earth_2_2",
    "properties": {
      "acquiredTick": 12,
      "level": 1,
      "modifiers": {},
      "source": "learn_spell",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_000",
    "target": "power.spell.spell_gen_earth_2_2",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_001_power.spell.spell_gen_holy_1_0",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_001",
    "target": "power.spell.spell_gen_holy_1_0",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_001_power.spell.spell_gen_holy_1_1",
    "properties": {
      "acquiredTick": 11,
      "level": 1,
      "modifiers": {},
      "source": "learn_spell",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_001",
    "target": "power.spell.spell_gen_holy_1_1",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_001_power.spell.spell_gen_holy_2_2",
    "properties": {
      "acquiredTick": 12,
      "level": 1,
      "modifiers": {},
      "source": "learn_spell",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_001",
    "target": "power.spell.spell_gen_holy_2_2",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_002_power.spell.spell_gen_summoning_1_0",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_002",
    "target": "power.spell.spell_gen_summoning_1_0",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_002_power.spell.spell_gen_summoning_1_1",
    "properties": {
      "acquiredTick": 11,
      "level": 1,
      "modifiers": {},
      "source": "learn_spell",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_002",
    "target": "power.spell.spell_gen_summoning_1_1",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_002_power.spell.spell_gen_summoning_2_2",
    "properties": {
      "acquiredTick": 12,
      "level": 1,
      "modifiers": {},
      "source": "learn_spell",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_002",
    "target": "power.spell.spell_gen_summoning_2_2",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_003_power.spell.spell_gen_divination_1_0",
    "properties": {
      "acquiredTick": 11,
      "level": 1,
      "modifiers": {},
      "source": "learn_spell",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_003",
    "target": "power.spell.spell_gen_divination_1_0",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_003_power.spell.spell_gen_divination_1_1",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_003",
    "target": "power.spell.spell_gen_divination_1_1",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_003_power.spell.spell_gen_divination_2_2",
    "properties": {
      "acquiredTick": 12,
      "level": 1,
      "modifiers": {},
      "source": "learn_spell",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_003",
    "target": "power.spell.spell_gen_divination_2_2",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_004_power.spell.spell_gen_shamanism_1_0",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_004",
    "target": "power.spell.spell_gen_shamanism_1_0",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_005_power.spell.spell_gen_necromancy_1_1",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_005",
    "target": "power.spell.spell_gen_necromancy_1_1",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_006_power.spell.spell_gen_earth_1_1",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_006",
    "target": "power.spell.spell_gen_earth_1_1",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_007_power.spell.spell_gen_transmutation_1_1",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_007",
    "target": "power.spell.spell_gen_transmutation_1_1",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_008_power.spell.spell_gen_binding_1_0",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_008",
    "target": "power.spell.spell_gen_binding_1_0",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_009_power.spell.spell_gen_rune_1_0",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_009",
    "target": "power.spell.spell_gen_rune_1_0",
    "type": "has_trait",
  },
  {
    "id": "knows_spell_caster_000_power.spell.spell_gen_earth_1_0",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "matter",
      "tradition": "magic.earth",
    },
    "source": "caster_000",
    "target": "power.spell.spell_gen_earth_1_0",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_000_power.spell.spell_gen_earth_1_1",
    "properties": {
      "learnedTick": 11,
      "source": "learn_spell",
      "sphereAffinity": "matter",
      "tradition": "magic.earth",
    },
    "source": "caster_000",
    "target": "power.spell.spell_gen_earth_1_1",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_000_power.spell.spell_gen_earth_2_2",
    "properties": {
      "learnedTick": 12,
      "source": "learn_spell",
      "sphereAffinity": "matter",
      "tradition": "magic.earth",
    },
    "source": "caster_000",
    "target": "power.spell.spell_gen_earth_2_2",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_000_power.spell.spell_gen_earth_2_3",
    "properties": {
      "learnedTick": 13,
      "source": "learn_spell",
      "sphereAffinity": "force",
      "tradition": "magic.earth",
    },
    "source": "caster_000",
    "target": "power.spell.spell_gen_earth_2_3",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_000_power.spell.spell_gen_earth_3_4",
    "properties": {
      "learnedTick": 14,
      "source": "learn_spell",
      "sphereAffinity": "force",
      "tradition": "magic.earth",
    },
    "source": "caster_000",
    "target": "power.spell.spell_gen_earth_3_4",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_001_power.spell.spell_gen_holy_1_0",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "spirit",
      "tradition": "magic.holy",
    },
    "source": "caster_001",
    "target": "power.spell.spell_gen_holy_1_0",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_001_power.spell.spell_gen_holy_1_1",
    "properties": {
      "learnedTick": 11,
      "source": "learn_spell",
      "sphereAffinity": "spirit",
      "tradition": "magic.holy",
    },
    "source": "caster_001",
    "target": "power.spell.spell_gen_holy_1_1",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_001_power.spell.spell_gen_holy_2_2",
    "properties": {
      "learnedTick": 12,
      "source": "learn_spell",
      "sphereAffinity": "spirit",
      "tradition": "magic.holy",
    },
    "source": "caster_001",
    "target": "power.spell.spell_gen_holy_2_2",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_001_power.spell.spell_gen_holy_2_3",
    "properties": {
      "learnedTick": 13,
      "source": "learn_spell",
      "sphereAffinity": "spirit",
      "tradition": "magic.holy",
    },
    "source": "caster_001",
    "target": "power.spell.spell_gen_holy_2_3",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_001_power.spell.spell_gen_holy_3_4",
    "properties": {
      "learnedTick": 14,
      "source": "learn_spell",
      "sphereAffinity": "light",
      "tradition": "magic.holy",
    },
    "source": "caster_001",
    "target": "power.spell.spell_gen_holy_3_4",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_002_power.spell.spell_gen_summoning_1_0",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "force",
      "tradition": "magic.summoning",
    },
    "source": "caster_002",
    "target": "power.spell.spell_gen_summoning_1_0",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_002_power.spell.spell_gen_summoning_1_1",
    "properties": {
      "learnedTick": 11,
      "source": "learn_spell",
      "sphereAffinity": "spirit",
      "tradition": "magic.summoning",
    },
    "source": "caster_002",
    "target": "power.spell.spell_gen_summoning_1_1",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_002_power.spell.spell_gen_summoning_2_2",
    "properties": {
      "learnedTick": 12,
      "source": "learn_spell",
      "sphereAffinity": "spirit",
      "tradition": "magic.summoning",
    },
    "source": "caster_002",
    "target": "power.spell.spell_gen_summoning_2_2",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_002_power.spell.spell_gen_summoning_2_3",
    "properties": {
      "learnedTick": 13,
      "source": "learn_spell",
      "sphereAffinity": "force",
      "tradition": "magic.summoning",
    },
    "source": "caster_002",
    "target": "power.spell.spell_gen_summoning_2_3",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_002_power.spell.spell_gen_summoning_3_4",
    "properties": {
      "learnedTick": 14,
      "source": "learn_spell",
      "sphereAffinity": "force",
      "tradition": "magic.summoning",
    },
    "source": "caster_002",
    "target": "power.spell.spell_gen_summoning_3_4",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_003_power.spell.spell_gen_divination_1_0",
    "properties": {
      "learnedTick": 11,
      "source": "learn_spell",
      "sphereAffinity": "mind",
      "tradition": "magic.divination",
    },
    "source": "caster_003",
    "target": "power.spell.spell_gen_divination_1_0",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_003_power.spell.spell_gen_divination_1_1",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "time",
      "tradition": "magic.divination",
    },
    "source": "caster_003",
    "target": "power.spell.spell_gen_divination_1_1",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_003_power.spell.spell_gen_divination_2_2",
    "properties": {
      "learnedTick": 12,
      "source": "learn_spell",
      "sphereAffinity": "mind",
      "tradition": "magic.divination",
    },
    "source": "caster_003",
    "target": "power.spell.spell_gen_divination_2_2",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_003_power.spell.spell_gen_divination_2_3",
    "properties": {
      "learnedTick": 13,
      "source": "learn_spell",
      "sphereAffinity": "time",
      "tradition": "magic.divination",
    },
    "source": "caster_003",
    "target": "power.spell.spell_gen_divination_2_3",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_003_power.spell.spell_gen_divination_3_4",
    "properties": {
      "learnedTick": 14,
      "source": "learn_spell",
      "sphereAffinity": "mind",
      "tradition": "magic.divination",
    },
    "source": "caster_003",
    "target": "power.spell.spell_gen_divination_3_4",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_004_power.spell.spell_gen_shamanism_1_0",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "spirit",
      "tradition": "magic.shamanism",
    },
    "source": "caster_004",
    "target": "power.spell.spell_gen_shamanism_1_0",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_005_power.spell.spell_gen_necromancy_1_1",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "spirit",
      "tradition": "magic.necromancy",
    },
    "source": "caster_005",
    "target": "power.spell.spell_gen_necromancy_1_1",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_006_power.spell.spell_gen_earth_1_1",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "matter",
      "tradition": "magic.earth",
    },
    "source": "caster_006",
    "target": "power.spell.spell_gen_earth_1_1",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_007_power.spell.spell_gen_transmutation_1_1",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "life",
      "tradition": "magic.transmutation",
    },
    "source": "caster_007",
    "target": "power.spell.spell_gen_transmutation_1_1",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_008_power.spell.spell_gen_binding_1_0",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "matter",
      "tradition": "magic.binding",
    },
    "source": "caster_008",
    "target": "power.spell.spell_gen_binding_1_0",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_009_power.spell.spell_gen_rune_1_0",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "mind",
      "tradition": "magic.rune",
    },
    "source": "caster_009",
    "target": "power.spell.spell_gen_rune_1_0",
    "type": "knows_spell",
  },
]
`;

exports[`THR-1672 pin — the three spell writers write the same edges through grantSpell > create × Power (learn_spell), library and sphere shelves, through the slot cap > marks 1`] = `[]`;

exports[`THR-1672 pin — the three spell writers write the same edges through grantSpell > create × Power (learn_spell), library and sphere shelves, through the slot cap > results 1`] = `
[
  {
    "createdId": "knows_spell_caster_000_power.spell.spell_gen_earth_1_1",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_000_power.spell.spell_gen_earth_2_2",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_000_power.spell.spell_gen_earth_2_3",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_000_power.spell.spell_gen_earth_3_4",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_001_power.spell.spell_gen_holy_1_1",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_001_power.spell.spell_gen_holy_2_2",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_001_power.spell.spell_gen_holy_2_3",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_001_power.spell.spell_gen_holy_3_4",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_002_power.spell.spell_gen_summoning_1_1",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_002_power.spell.spell_gen_summoning_2_2",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_002_power.spell.spell_gen_summoning_2_3",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_002_power.spell.spell_gen_summoning_3_4",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_003_power.spell.spell_gen_divination_1_0",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_003_power.spell.spell_gen_divination_2_2",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_003_power.spell.spell_gen_divination_2_3",
    "op": "learn_spell",
    "success": true,
  },
  {
    "createdId": "knows_spell_caster_003_power.spell.spell_gen_divination_3_4",
    "op": "learn_spell",
    "success": true,
  },
]
`;

exports[`THR-1672 pin — the three spell writers write the same edges through grantSpell > seedSpellKnowing, THR-1571 path (no library) > edges 1`] = `
[
  {
    "id": "has_trait_caster_000_power.spell.spell_hollow_crown",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_000",
    "target": "power.spell.spell_hollow_crown",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_001_power.spell.spell_height_anchor",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_001",
    "target": "power.spell.spell_height_anchor",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_002_power.spell.spell_hollow_crown",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_002",
    "target": "power.spell.spell_hollow_crown",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_003_power.spell.spell_height_anchor",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_003",
    "target": "power.spell.spell_height_anchor",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_004_power.spell.spell_hollow_crown",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_004",
    "target": "power.spell.spell_hollow_crown",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_005_power.spell.spell_height_anchor",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_005",
    "target": "power.spell.spell_height_anchor",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_006_power.spell.spell_hollow_crown",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_006",
    "target": "power.spell.spell_hollow_crown",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_007_power.spell.spell_height_anchor",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_007",
    "target": "power.spell.spell_height_anchor",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_008_power.spell.spell_hollow_crown",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_008",
    "target": "power.spell.spell_hollow_crown",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_009_power.spell.spell_height_anchor",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_009",
    "target": "power.spell.spell_height_anchor",
    "type": "has_trait",
  },
  {
    "id": "knows_spell_caster_000_power.spell.spell_hollow_crown",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "mind",
    },
    "source": "caster_000",
    "target": "power.spell.spell_hollow_crown",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_001_power.spell.spell_height_anchor",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "time",
    },
    "source": "caster_001",
    "target": "power.spell.spell_height_anchor",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_002_power.spell.spell_hollow_crown",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "mind",
    },
    "source": "caster_002",
    "target": "power.spell.spell_hollow_crown",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_003_power.spell.spell_height_anchor",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "time",
    },
    "source": "caster_003",
    "target": "power.spell.spell_height_anchor",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_004_power.spell.spell_hollow_crown",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "mind",
    },
    "source": "caster_004",
    "target": "power.spell.spell_hollow_crown",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_005_power.spell.spell_height_anchor",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "time",
    },
    "source": "caster_005",
    "target": "power.spell.spell_height_anchor",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_006_power.spell.spell_hollow_crown",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "mind",
    },
    "source": "caster_006",
    "target": "power.spell.spell_hollow_crown",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_007_power.spell.spell_height_anchor",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "time",
    },
    "source": "caster_007",
    "target": "power.spell.spell_height_anchor",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_008_power.spell.spell_hollow_crown",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "mind",
    },
    "source": "caster_008",
    "target": "power.spell.spell_hollow_crown",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_009_power.spell.spell_height_anchor",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "time",
    },
    "source": "caster_009",
    "target": "power.spell.spell_height_anchor",
    "type": "knows_spell",
  },
]
`;

exports[`THR-1672 pin — the three spell writers write the same edges through grantSpell > seedSpellKnowing, THR-1571 path (no library) > report 1`] = `
{
  "bySpell": {
    "spell_height_anchor": 5,
    "spell_hollow_crown": 5,
  },
  "byTradition": {},
  "casters": 10,
  "fallbackCantrip": 5,
  "fromLibrary": 0,
  "seeded": 10,
}
`;

exports[`THR-1672 pin — the three spell writers write the same edges through grantSpell > seedSpellKnowing, THR-1572 library path > edges 1`] = `
[
  {
    "id": "has_trait_caster_000_power.spell.spell_gen_earth_1_0",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_000",
    "target": "power.spell.spell_gen_earth_1_0",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_001_power.spell.spell_gen_holy_1_0",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_001",
    "target": "power.spell.spell_gen_holy_1_0",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_002_power.spell.spell_gen_summoning_1_0",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_002",
    "target": "power.spell.spell_gen_summoning_1_0",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_003_power.spell.spell_gen_divination_1_1",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_003",
    "target": "power.spell.spell_gen_divination_1_1",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_004_power.spell.spell_gen_shamanism_1_0",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_004",
    "target": "power.spell.spell_gen_shamanism_1_0",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_005_power.spell.spell_gen_necromancy_1_1",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_005",
    "target": "power.spell.spell_gen_necromancy_1_1",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_006_power.spell.spell_gen_earth_1_1",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_006",
    "target": "power.spell.spell_gen_earth_1_1",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_007_power.spell.spell_gen_transmutation_1_1",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_007",
    "target": "power.spell.spell_gen_transmutation_1_1",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_008_power.spell.spell_gen_binding_1_0",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_008",
    "target": "power.spell.spell_gen_binding_1_0",
    "type": "has_trait",
  },
  {
    "id": "has_trait_caster_009_power.spell.spell_gen_rune_1_0",
    "properties": {
      "acquiredTick": 0,
      "level": 1,
      "modifiers": {},
      "source": "seeded",
      "ticksRemaining": null,
      "visibility": "discoverable",
    },
    "source": "caster_009",
    "target": "power.spell.spell_gen_rune_1_0",
    "type": "has_trait",
  },
  {
    "id": "knows_spell_caster_000_power.spell.spell_gen_earth_1_0",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "matter",
      "tradition": "magic.earth",
    },
    "source": "caster_000",
    "target": "power.spell.spell_gen_earth_1_0",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_001_power.spell.spell_gen_holy_1_0",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "spirit",
      "tradition": "magic.holy",
    },
    "source": "caster_001",
    "target": "power.spell.spell_gen_holy_1_0",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_002_power.spell.spell_gen_summoning_1_0",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "force",
      "tradition": "magic.summoning",
    },
    "source": "caster_002",
    "target": "power.spell.spell_gen_summoning_1_0",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_003_power.spell.spell_gen_divination_1_1",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "time",
      "tradition": "magic.divination",
    },
    "source": "caster_003",
    "target": "power.spell.spell_gen_divination_1_1",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_004_power.spell.spell_gen_shamanism_1_0",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "spirit",
      "tradition": "magic.shamanism",
    },
    "source": "caster_004",
    "target": "power.spell.spell_gen_shamanism_1_0",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_005_power.spell.spell_gen_necromancy_1_1",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "spirit",
      "tradition": "magic.necromancy",
    },
    "source": "caster_005",
    "target": "power.spell.spell_gen_necromancy_1_1",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_006_power.spell.spell_gen_earth_1_1",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "matter",
      "tradition": "magic.earth",
    },
    "source": "caster_006",
    "target": "power.spell.spell_gen_earth_1_1",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_007_power.spell.spell_gen_transmutation_1_1",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "life",
      "tradition": "magic.transmutation",
    },
    "source": "caster_007",
    "target": "power.spell.spell_gen_transmutation_1_1",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_008_power.spell.spell_gen_binding_1_0",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "matter",
      "tradition": "magic.binding",
    },
    "source": "caster_008",
    "target": "power.spell.spell_gen_binding_1_0",
    "type": "knows_spell",
  },
  {
    "id": "knows_spell_caster_009_power.spell.spell_gen_rune_1_0",
    "properties": {
      "learnedTick": 0,
      "source": "seeded",
      "sphereAffinity": "mind",
      "tradition": "magic.rune",
    },
    "source": "caster_009",
    "target": "power.spell.spell_gen_rune_1_0",
    "type": "knows_spell",
  },
]
`;

exports[`THR-1672 pin — the three spell writers write the same edges through grantSpell > seedSpellKnowing, THR-1572 library path > report 1`] = `
{
  "bySpell": {
    "spell_gen_binding_1_0": 1,
    "spell_gen_divination_1_1": 1,
    "spell_gen_earth_1_0": 1,
    "spell_gen_earth_1_1": 1,
    "spell_gen_holy_1_0": 1,
    "spell_gen_necromancy_1_1": 1,
    "spell_gen_rune_1_0": 1,
    "spell_gen_shamanism_1_0": 1,
    "spell_gen_summoning_1_0": 1,
    "spell_gen_transmutation_1_1": 1,
  },
  "byTradition": {
    "magic.binding": 1,
    "magic.divination": 1,
    "magic.earth": 2,
    "magic.holy": 1,
    "magic.necromancy": 1,
    "magic.rune": 1,
    "magic.shamanism": 1,
    "magic.summoning": 1,
    "magic.transmutation": 1,
  },
  "casters": 10,
  "fallbackCantrip": 0,
  "fromLibrary": 10,
  "seeded": 10,
}
`;
